--- a/todo
+++ b/todo
@@ -1,5 +1,7 @@
 try catch in c,
 mysql_fetch_row return what and it's limitations,
+learn headers again...
+and fix it at sql.c
 
 
 prob{ local var can't be return, may because that is not a ponter}
